<resources>
    <string name="app_name">WorkoutApp</string>
    <string name="start">Start</string>
    <string name="profile_image">profile image</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="exerciseName">Exercise name</string>
    <string name="exersice_duration">30</string>
    <string name="exercise_image">exercise Image</string>
    <string name="rest_duration">10</string>
    <string name="exercise_image_">Exercise Image</string>
    <string name="upcoming_exercise_is">Upcoming exercise is</string>
    <string name="end">END</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_finished_the_worktout">You have finished the worktout</string>
    <string name="finish">Finish</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="asking">This will stop your workout. Are you sure you want to quit?</string>
    <string name="bmi">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="history">History</string>
    <string name="height_hint_text">HEIGHT (in cm)</string>
    <string name="weight_hint">WEIGHT (in kg)</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="calculate">Calculate</string>
    <string name="metric">metric</string>
    <string name="us">us</string>
    <string name="height_feet">HEIGHT (feet)</string>
    <string name="height_in_inch">HEIGHT (in Inch)</string>
    <string name="weight_in_paund">WEIGHT (in paund)</string>
</resources>