<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:src="@drawable/img_main_page"
            android:contentDescription="@string/profile_image"
            />
        <LinearLayout
            android:id="@+id/ll_start"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:gravity="center"
            android:background="@drawable/start_b_ripple_effect"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textSize="26sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_bmi"
                android:layout_marginStart="8dp"
                app:cardElevation="5dp"
                style="@style/cardViewstyle">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_gravity="center"
                    >
                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:text="@string/bmi"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:background="@drawable/item_circular_background_accent"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/calculator"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_history"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                app:cardElevation="5dp"
                style="@style/cardViewstyle"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_gravity="center"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/history"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>