<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ExcerciseActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_actionBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:titleTextColor="@color/black"
        android:theme="@style/ToolbarColoredBackArrow"
        />
    <LinearLayout
        android:id="@+id/ll_restView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_below="@+id/tb_actionBar"
        android:visibility="visible"
        tools:visibility="visible"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/get_ready_for"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            />
        

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/item_circular_border_accent"
            >
            <ProgressBar
                android:id="@+id/pb_time_progress"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:indeterminate="false"
                android:max="10"
                android:progress="8"
                android:background="@drawable/circular_progress_gray"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:rotation="-90"
                />
            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/item_circular_background_accent"
                >
                <TextView
                    android:id="@+id/tv_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rest_duration"
                    android:textSize="27sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_exercise_is"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/tv_upcomming_exercise_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exerciseName"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_marginTop="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_exerciseView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_below="@+id/tb_actionBar"
        android:visibility="invisible"
        tools:visibility="invisible"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/iv_exercise_image"
            android:contentDescription="@string/exercise_image_"
            android:src="@drawable/ic_jumping_jacks"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/tv_exercise_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/exerciseName"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            />
        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/item_circular_border_accent"
            >
            <ProgressBar
                android:id="@+id/pb_exercise_time_progress"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:indeterminate="false"
                android:max="30"
                android:progress="100"
                android:background="@drawable/circular_progress_gray"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:rotation="-90"
                />
            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/item_circular_background_accent"
                >
                <TextView
                    android:id="@+id/tv_exercise_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exersice_duration"
                    android:textColor="@color/white"
                    android:textSize="27sp" />
            </LinearLayout>
        </FrameLayout>

    </LinearLayout>

</RelativeLayout>